feat: remove explicit bot + migerate to latest